# bb-auth

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  CLAUDE.md  Cargo.toml  README.md
deploy/: allowed_emails.example  bb-auth.env.example  bb-auth.service
docs/: ARCHITECTURE.md  AUTHENTICATION_FLOW.md
scripts/: build.sh  deploy.ps1  deploy.sh
src/: main.rs
