[package]
name = "bb-auth"
version = "1.0.0"
edition = "2021"
description = "Minimal, service-agnostic Cognito id_token → session-cookie auth gate (nginx auth_request)"
license = "MIT"

[[bin]]
name = "bb-auth"
path = "src/main.rs"

[dependencies]
# Tiny blocking, threaded HTTP server — pure Rust, no async runtime (low resident memory).
tiny_http = "0.12"
# Blocking HTTP client for the JWKS fetch. rustls (ring) + bundled Mozilla roots,
# so NO system OpenSSL / cert store is needed → clean aarch64 cross-compile.
ureq = { version = "2", default-features = false, features = ["tls"] }
# RS256 id_token validation (signature via JWKS, iss/aud/exp). Uses `ring`.
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HMAC-SHA256 signed session cookie.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# x-www-form-urlencoded body + query parsing (small, standalone).
form_urlencoded = "1"
# SIGHUP handling for live allowlist reload. Pure Rust + libc FFI — no system
# OpenSSL, keeps the aarch64 cross-compile clean.
signal-hook = { version = "0.3", features = ["iterator"] }

[profile.release]
opt-level = "z"   # optimize for size — tiny binary, fast enough for a gate
lto = true
codegen-units = 1
panic = "abort"
strip = true
